# schemas/chat.go
@@ -16,10 +16,13 @@ type SendMessageRequest struct {
 
 // Define SendMessageResponse schema
 type SendMessageResponse struct {
-	MessageID  uuid.UUID `json:"messageID"`
-	Message    string    `json:"message"`
-	ReceiverID uuid.UUID `json:"receiverID"`
-	CreatedAt  time.Time `json:"createdAt"`
+	MessageID    uuid.UUID `json:"message_id"`
+	Message      string    `json:"message"`
+	ReceiverID   uuid.UUID `json:"receiver_id"`
+	CallStatus   string    `json:"call_status"`   // missed or ended or rejected
+	CallDuration int64     `json:"call_duration"` // Call duration in seconds
+	MessageType  string    `json:"message_type"`  // text or image or missed_call, video_call, voice_call
+	CreatedAt    time.Time `json:"createdAt"`
 }
 
 // Define SendImageRequest schema
@@ -30,10 +33,13 @@ type SendImageRequest struct {
 }
 
 type SendImageResponse struct {
-	ImageURL   string    `json:"image_url"`
-	ReceiverID string    `json:"receiverID"`
-	CreatedAt  time.Time `json:"createdAt"`
-	MessageID  string    `json:"messageID"`
+	ReceiverID   uuid.UUID `json:"receiver_id"`
+	CreatedAt    time.Time `json:"createdAt"`
+	CallStatus   string    `json:"call_status"`   // missed or ended or rejected
+	CallDuration int64     `json:"call_duration"` // Call duration in seconds
+	MessageType  string    `json:"message_type"`  // text or image or missed_call, video_call, voice_call
+	MessageID    uuid.UUID `json:"messageID"`
+	Message      string    `json:"message"`
 }
 
 // Define GetAllChatRoomsRequest schema
@@ -68,10 +74,50 @@ type GetChatMessagesResponse struct {
 // Define MessageResponse schema
 
 type MessageResponse struct {
-	ID          uuid.UUID `json:"message_id"`
-	Message     string    `json:"message"`
-	SenderID    uuid.UUID `json:"sender_id"`
-	CreatedAt   time.Time `json:"created_at"`
-	ReceiverID  uuid.UUID `json:"receiver_id"`
-	MessageType string    `json:"message_type"` // text or image or missed_call, video_call, voice_call
+	ID           uuid.UUID `json:"message_id"`
+	Message      string    `json:"message"`
+	CreatedAt    time.Time `json:"created_at"`
+	ReceiverID   uuid.UUID `json:"receiver_id"`
+	CallStatus   string    `json:"call_status"`   // missed or ended or rejected
+	CallDuration int64     `json:"call_duration"` // Call duration in seconds
+	MessageType  string    `json:"message_type"`  // text or image or missed_call, video_call, voice_call
+}
+
+// Define InitiateCallRequest schema as query parameters
+type InitiateCallRequest struct {
+	ChatRoomID uuid.UUID `json:"chatRoomID" binding:"required,uuid" validate:"required,uuid"`
+	Role       string    `json:"role" binding:"required" validate:"required,oneof=publisher subscriber"` // publisher or subscriber
+	ReceiverID uuid.UUID `json:"receiverID" binding:"required" validate:"required,uuid"`
+	ExpireTime uint32    `json:"expireTime" binding:"required" validate:"required"`
+	// CallType   string    `json:"callType" binding:"required" validate:"required,oneof=video_call voice_call"`
+}
+
+// Define InitiateCallResponse schema
+type InitiateCallResponse struct {
+	TokenPublisher  string    `json:"token_publisher"`
+	TokenSubscriber string    `json:"token_subscriber"`
+	ChatRoomID      uuid.UUID `json:"chatroom_id"`
+	CallerID        uuid.UUID `json:"caller_id"`
+	// CallType        string    `json:"call_type"`
+}
+
+// Define UpdateCallStatusRequest schema
+type UpdateCallStatusRequest struct {
+	ChatRoomID uuid.UUID `json:"chatRoomID" binding:"required"`
+	CallStatus string    `json:"callStatus" binding:"required" validate:"required,oneof=missed ended rejected"`
+	CallType   string    `json:"callType" binding:"required" validate:"required,oneof=video_call voice_call"`
+	Duration   int64     `json:"duration" binding:"omitempty"`
+	ReceiverID uuid.UUID `json:"receiverID" binding:"required"`
+}
+
+// Define UpdateCallStatusResponse schema
+type UpdateCallStatusResponse struct {
+	ChatRoomID   uuid.UUID `json:"chat_room_id"`
+	CallStatus   string    `json:"call_status"`   // missed or ended or rejected
+	CallDuration int64     `json:"call_duration"` // Call duration in seconds
+	Message      string    `json:"message"`       // Call status message
+	MessageID    uuid.UUID `json:"message_id"`
+	CreatedAt    time.Time `json:"created_at"`   // Call status update time
+	ReceiverID   uuid.UUID `json:"receiver_id"`  // User who received the call
+	MessageType  string    `json:"message_type"` // text or image or missed_call, video_call, voice_call
 }
